<resources>
    <string name="app_name">Task Manager</string>
    <string name="title_activity_main1">Task Manager</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_search_title">Search</string>

    <string name="nav_support_name">Unai Sainz de la Maza Gamboa</string>
    <string name="nav_support_email">unaihtc70@gmail.com</string>
    <string name="nav_img_description">Support image</string>

    <string name="drawer_menu_txt_tasks">Tasks</string>
    <string name="drawer_menu_txt_labels">Labels</string>
    <string name="drawer_menu_txt_settings">Settings</string>
    <string name="drawer_menu_txt_help">Help and feedback</string>

    <string name="floating_menu_add">Add task</string>
    <string name="floating_menu_camera">Open camera</string>

    <string name="dialog_main_title">Create A Task</string>
    <string name="dialog_task_title">What do you want to save?</string>
    <string name="dialog_task_hint_title">Intro task title here</string>
    <string name="dialog_task_hint_description">Intro task description here</string>
    <string name="dialog_task_hint_label">Intro task label name here</string>

    <string name="task_empty_list">Looks like you are all done\n(or haven\'t added anything)!</string>

    <string name="support_email_subject">Intro here subject.</string>
    <string name="support_email_body">Intro here body.</string>
    <string name="support_email_not_client">There are no email clients installed.</string>
    <string name="support_email_send">Send email...</string>

    <string name="settings_text_view_lenguage">Select lenguage: </string>
    <string name="settings_text_view_music">Music ? </string>
    <string name="settings_text_radio_english">English</string>
    <string name="settings_text_radio_euskera">Basque</string>
    <string name="settings_text_radio_castellano">Spanish</string>

    <string name="edit_task_dialog_title">So, you want to update your task?</string>
    <string name="edit_task_title_hint">Edit title here</string>
    <string name="edit_task_description_hint">Edit description here</string>
    <string name="edit_task_label_hint">Edit label here</string>
</resources>
