<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/edit_task_dialog_title"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/dialogTitleUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/edit_task_title_hint"
        android:imeOptions="actionDone"
        android:maxLines="1"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/dialogDescriptionUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_task_description_hint"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/dialogLabelUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_task_label_hint"
        android:textSize="14sp" />

</LinearLayout>