<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/dialog_task_title"
        android:textStyle="bold"
        android:textSize="18sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dialogTitleInput"
        android:layout_marginTop="10dp"
        android:maxLines="1"
        android:imeOptions="actionDone"
        android:hint="@string/dialog_task_hint_title"
        android:textSize="16sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dialogDescriptionInput"
        android:hint="@string/dialog_task_hint_description"
        android:textSize="14sp" />
</LinearLayout>