<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.codi6.proyect.activity.MainActivity1"
    android:id="@+id/settings_view"
    android:layout_marginTop="10dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <TextView
            android:text="@string/settings_text_view_lenguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tV2"
            android:textSize="20sp"
            android:textStyle="normal|bold"
            android:textAlignment="center"
             />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <RadioButton
                    android:text="@string/settings_text_radio_english"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton"
                    android:checked="true"/>

                <RadioButton
                    android:text="@string/settings_text_radio_euskera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton2" />

                <RadioButton
                    android:text="@string/settings_text_radio_castellano"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton3" />



        </RadioGroup>

        <TextView
            android:text="@string/settings_text_view_music"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textSize="20sp"
            android:textStyle="normal|bold"
            android:textAlignment="center"
            android:layout_marginTop="10dp" />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/musicBtn"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="15sp"
            android:checked="false" />



</LinearLayout>